--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -45,35 +45,35 @@
                 <li class="nav-item">
                     <div class="nav-link">产业链平台 <i class="fas fa-chevron-down"></i></div>
                     <div class="dropdown-menu">
-                        <a class="dropdown-link" href="hydrocoffee.cn/index.html" target="_blank"><i class="fas fa-leaf"></i> HydroCoffee 水培技术</a>
-                        <a class="dropdown-link" href="kaffeelab.com/index.html" target="_blank"><i class="fas fa-flask"></i> Kaffeelab 咖啡实验室</a>
+                        <a class="dropdown-link" href="/hydrocoffee.cn/index.html" target="_blank"><i class="fas fa-leaf"></i> HydroCoffee 水培技术</a>
+                        <a class="dropdown-link" href="/kaffeelab.com/index.html" target="_blank"><i class="fas fa-flask"></i> Kaffeelab 咖啡实验室</a>
                     </div>
                 </li>
                 <li class="nav-item">
                     <div class="nav-link">AI与技术 <i class="fas fa-chevron-down"></i></div>
                     <div class="dropdown-menu">
-                        <a class="dropdown-link" href="JEBI Agent jebi.one/index.html" target="_blank"><i class="fas fa-robot"></i> JEBI Agent AI大脑</a>
-                        <a class="dropdown-link" href="JEBI Works jebiwork.com/index.html" target="_blank"><i class="fas fa-cogs"></i> JEBI Works 加工平台</a>
+                        <a class="dropdown-link" href="/JEBI Agent jebi.one/index.html" target="_blank"><i class="fas fa-robot"></i> JEBI Agent AI大脑</a>
+                        <a class="dropdown-link" href="/JEBI Works jebiwork.com/index.html" target="_blank"><i class="fas fa-cogs"></i> JEBI Works 加工平台</a>
                     </div>
                 </li>
                 <li class="nav-item">
                     <div class="nav-link">金融与投资 <i class="fas fa-chevron-down"></i></div>
                     <div class="dropdown-menu">
-                        <a class="dropdown-link" href="JEBI REITs reits.cafe/index.html" target="_blank"><i class="fas fa-building"></i> JEBI REITs 平台</a>
-                        <a class="dropdown-link" href="JEBIStarter jebistarter.com/index.html" target="_blank"><i class="fas fa-rocket"></i> JEBI Starter 众筹</a>
-                        <a class="dropdown-link" href="Shinae Coffee Bank shinaebank.com/index.html" target="_blank"><i class="fas fa-university"></i> SHINAE Coffee Bank</a>
+                        <a class="dropdown-link" href="/JEBI REITs reits.cafe/index.html" target="_blank"><i class="fas fa-building"></i> JEBI REITs 平台</a>
+                        <a class="dropdown-link" href="/JEBIStarter jebistarter.com/index.html" target="_blank"><i class="fas fa-rocket"></i> JEBI Starter 众筹</a>
+                        <a class="dropdown-link" href="/Shinae Coffee Bank shinaebank.com/index.html" target="_blank"><i class="fas fa-university"></i> SHINAE Coffee Bank</a>
                     </div>
                 </li>
                 <li class="nav-item">
                     <div class="nav-link">品牌与零售 <i class="fas fa-chevron-down"></i></div>
                     <div class="dropdown-menu">
-                        <a class="dropdown-link" href="JEBI Coffee Shop jebi.cafe/index.html" target="_blank"><i class="fas fa-store"></i> JEBI Coffee Shop</a>
+                        <a class="dropdown-link" href="/JEBI Coffee Shop jebi.cafe/index.html" target="_blank"><i class="fas fa-store"></i> JEBI Coffee Shop</a>
                     </div>
                 </li>
                 <li class="nav-item">
                     <div class="nav-link">其他平台 <i class="fas fa-chevron-down"></i></div>
                     <div class="dropdown-menu">
-                        <a class="dropdown-link" href="Medialink curvecopyright.com/index.html" target="_blank"><i class="fas fa-copyright"></i> Medialink IP平台</a>
+                        <a class="dropdown-link" href="/Medialink curvecopyright.com/index.html" target="_blank"><i class="fas fa-copyright"></i> Medialink IP平台</a>
                     </div>
                 </li>
             </ul>
@@ -85,47 +85,47 @@
             <p>全球领先的咖啡产业数字化与可持续发展平台</p>
         </div>
         <div class="card-grid">
-            <a href="hydrocoffee.cn/index.html" target="_blank" class="card" style="text-decoration:none;display:block;">
+            <a href="/hydrocoffee.cn/index.html" target="_blank" class="card" style="text-decoration:none;display:block;">
                 <i class="fas fa-leaf" style="color: #00BA7C;"></i>
                 <h3>HydroCoffee 水培技术</h3>
                 <p>全球创新水培咖啡种植系统</p>
             </a>
-            <a href="JEBI Agent jebi.one/index.html" target="_blank" class="card" style="text-decoration:none;display:block;">
+            <a href="/JEBI Agent jebi.one/index.html" target="_blank" class="card" style="text-decoration:none;display:block;">
                 <i class="fas fa-robot" style="color: #9d4edd;"></i>
                 <h3>JEBI Agent AI大脑</h3>
                 <p>咖啡产业链AI智能大脑</p>
             </a>
-            <a href="JEBI Works jebiwork.com/index.html" target="_blank" class="card" style="text-decoration:none;display:block;">
+            <a href="/JEBI Works jebiwork.com/index.html" target="_blank" class="card" style="text-decoration:none;display:block;">
                 <i class="fas fa-cogs" style="color: #FF6B35;"></i>
                 <h3>JEBI Works 加工平台</h3>
                 <p>咖啡加工与烘焙平台</p>
             </a>
-            <a href="kaffeelab.com/index.html" target="_blank" class="card" style="text-decoration:none;display:block;">
+            <a href="/kaffeelab.com/index.html" target="_blank" class="card" style="text-decoration:none;display:block;">
                 <i class="fas fa-flask" style="color: #1D9BF0;"></i>
                 <h3>Kaffeelab 咖啡实验室</h3>
                 <p>咖啡研发中心</p>
             </a>
-            <a href="JEBI REITs reits.cafe/index.html" target="_blank" class="card" style="text-decoration:none;display:block;">
+            <a href="/JEBI REITs reits.cafe/index.html" target="_blank" class="card" style="text-decoration:none;display:block;">
                 <i class="fas fa-building" style="color: #FF6B35;"></i>
                 <h3>JEBI REITs 平台</h3>
                 <p>房地产投资信托基金</p>
             </a>
-            <a href="JEBIStarter jebistarter.com/index.html" target="_blank" class="card" style="text-decoration:none;display:block;">
+            <a href="/JEBIStarter jebistarter.com/index.html" target="_blank" class="card" style="text-decoration:none;display:block;">
                 <i class="fas fa-rocket" style="color: #9d4edd;"></i>
                 <h3>JEBI Starter 众筹</h3>
                 <p>低碳生活众筹平台</p>
             </a>
-            <a href="Shinae Coffee Bank shinaebank.com/index.html" target="_blank" class="card" style="text-decoration:none;display:block;">
+            <a href="/Shinae Coffee Bank shinaebank.com/index.html" target="_blank" class="card" style="text-decoration:none;display:block;">
                 <i class="fas fa-university" style="color: #00BA7C;"></i>
                 <h3>SHINAE Coffee Bank</h3>
                 <p>咖啡产业数字银行</p>
             </a>
-            <a href="JEBI Coffee Shop jebi.cafe/index.html" target="_blank" class="card" style="text-decoration:none;display:block;">
+            <a href="/JEBI Coffee Shop jebi.cafe/index.html" target="_blank" class="card" style="text-decoration:none;display:block;">
                 <i class="fas fa-store" style="color: #00BA7C;"></i>
                 <h3>JEBI Coffee Shop</h3>
                 <p>零碳精品咖啡连锁</p>
             </a>
-            <a href="Medialink curvecopyright.com/index.html" target="_blank" class="card" style="text-decoration:none;display:block;">
+            <a href="/Medialink curvecopyright.com/index.html" target="_blank" class="card" style="text-decoration:none;display:block;">
                 <i class="fas fa-copyright" style="color: #1D9BF0;"></i>
                 <h3>Medialink IP平台</h3>
                 <p>咖啡IP与数字资产</p>
